Fix style conflict with Jetpack Widget visibility — closes #76

--- a/scss/customizer.scss
+++ b/scss/customizer.scss
@@ -1494,3 +1494,38 @@ ul.font-options__options-list {
 .select2-container.select2-container--open {
 	z-index: 99999999;
 }
+
+
+
+
+
+//------------------------------------*\
+//    Jetpack Widget Visibility
+//------------------------------------*/
+
+.wp-customizer .widget-conditional {
+	.condition-control { @include clearfix(); }
+
+	.selection {
+		padding-right: 50px;
+		padding-left: 28px;
+		padding-bottom: 19px;
+		margin-left: 0;
+		margin-right: 0;
+		margin-bottom: 10px;
+		border-bottom: 1px solid $light;
+	}
+
+	.condition:last-child .selection {
+		border: 0;
+	}
+
+	select {
+		max-width: 100%;
+		width: 170px;
+	}
+
+	.condition-top select {
+		width: 130px;
+	}
+}
